--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,11 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>972</width>
-    <height>620</height>
+    <height>320</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>972</width>
+    <height>320</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>КПА БСШ-В</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTableWidget" name="tblBSWV">
@@ -67,7 +73,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>490</y>
+      <y>110</y>
       <width>47</width>
       <height>16</height>
      </rect>
@@ -80,7 +86,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>510</y>
+      <y>180</y>
       <width>47</width>
       <height>16</height>
      </rect>
