--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,26 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>1256</width>
-    <height>725</height>
+    <height>594</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>1256</width>
-    <height>725</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>КПА БСШ-В</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox">
       <property name="minimumSize">
        <size>
         <width>311</width>
-        <height>211</height>
+        <height>221</height>
        </size>
       </property>
       <property name="font">
@@ -424,8 +418,8 @@
      <widget class="QTableWidget" name="tblBSWV">
       <property name="minimumSize">
        <size>
-        <width>861</width>
-        <height>251</height>
+        <width>921</width>
+        <height>221</height>
        </size>
       </property>
       <property name="rowCount">
@@ -454,12 +448,12 @@
      <widget class="QTabWidget" name="tabWidget">
       <property name="minimumSize">
        <size>
-        <width>861</width>
-        <height>361</height>
+        <width>921</width>
+        <height>306</height>
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -472,15 +466,15 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
-          <width>827</width>
-          <height>281</height>
+          <y>10</y>
+          <width>891</width>
+          <height>251</height>
          </rect>
         </property>
         <property name="minimumSize">
          <size>
           <width>827</width>
-          <height>271</height>
+          <height>251</height>
          </size>
         </property>
         <property name="rowCount">
@@ -516,7 +510,7 @@
           <x>10</x>
           <y>10</y>
           <width>811</width>
-          <height>301</height>
+          <height>321</height>
          </rect>
         </property>
        </widget>
