--- a/errorform.ui
+++ b/errorform.ui
@@ -7,17 +7,29 @@
     <x>0</x>
     <y>0</y>
     <width>451</width>
-    <height>104</height>
+    <height>95</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>451</width>
+    <height>95</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>451</width>
+    <height>95</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Сообщение об ошибках</string>
   </property>
   <widget class="QPushButton" name="btnIgnor">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>70</y>
+     <x>330</x>
+     <y>60</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -29,14 +41,22 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>20</x>
      <y>30</y>
-     <width>47</width>
-     <height>13</height>
+     <width>381</width>
+     <height>16</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>Проблемы с подключенными устройствами.</string>
    </property>
   </widget>
  </widget>
