--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -978,6 +978,25 @@
     <zorder>pushButton</zorder>
     <zorder>lblError</zorder>
    </widget>
+   <widget class="QLabel" name="lblSize">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>550</y>
+      <width>231</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Резервный</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
