--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,6 +30,12 @@
     </item>
     <item row="0" column="1" rowspan="2">
      <widget class="QGroupBox" name="groupBox_3">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>1</horstretch>
+        <verstretch>1</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>941</width>
@@ -45,42 +51,50 @@
       <property name="title">
        <string>Телеметрия БСШ-В</string>
       </property>
-      <widget class="QTableWidget" name="tblBSWV">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>20</y>
-         <width>921</width>
-         <height>221</height>
-        </rect>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>921</width>
-         <height>221</height>
-        </size>
-       </property>
-       <property name="rowCount">
-        <number>6</number>
-       </property>
-       <property name="columnCount">
-        <number>3</number>
-       </property>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <column/>
-       <column/>
-       <column/>
+      <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
-        <property name="text">
-         <string/>
-        </property>
+        <widget class="QTableWidget" name="tblBSWV">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>2</horstretch>
+           <verstretch>2</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>921</width>
+           <height>221</height>
+          </size>
+         </property>
+         <property name="sizeIncrement">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="rowCount">
+          <number>6</number>
+         </property>
+         <property name="columnCount">
+          <number>3</number>
+         </property>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <column/>
+         <column/>
+         <column/>
+         <item row="0" column="0">
+          <property name="text">
+           <string/>
+          </property>
+         </item>
+        </widget>
        </item>
-      </widget>
+      </layout>
      </widget>
     </item>
     <item row="2" column="1">
@@ -109,6 +123,12 @@
           <width>881</width>
           <height>251</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>2</horstretch>
+          <verstretch>2</verstretch>
+         </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
@@ -557,6 +577,12 @@
     </item>
     <item row="1" column="0">
      <widget class="QGroupBox" name="groupBox">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>311</width>
@@ -933,19 +959,6 @@
       <zorder>label_2</zorder>
       <zorder>lblError</zorder>
      </widget>
-    </item>
-    <item row="3" column="1">
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
     </item>
    </layout>
   </widget>
