--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -93,7 +93,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -318,6 +318,19 @@
           <string>255 -  Проверка связи</string>
          </property>
         </widget>
+       </widget>
+       <widget class="QPushButton" name="pushButton">
+        <property name="geometry">
+         <rect>
+          <x>690</x>
+          <y>140</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Очистить</string>
+        </property>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_3">
