--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>КПА БСШ-В (RS485)</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../KPABSWV.png</normaloff>../KPABSWV.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
@@ -512,7 +516,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
