--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -516,7 +516,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -1018,6 +1018,9 @@
        </size>
       </property>
      </spacer>
+    </item>
+    <item row="2" column="0">
+     <widget class="QPlainTextEdit" name="consolTest"/>
     </item>
    </layout>
   </widget>
