--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,6 +23,9 @@
    <iconset>
     <normaloff>../KPABSWV.png</normaloff>../KPABSWV.png</iconset>
   </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
