--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -498,9 +498,6 @@
       <zorder>lblError</zorder>
      </widget>
     </item>
-    <item row="2" column="0" rowspan="2">
-     <widget class="QPlainTextEdit" name="consolTest"/>
-    </item>
     <item row="2" column="1" rowspan="2" colspan="2">
      <widget class="QTabWidget" name="tabWidget">
       <property name="sizePolicy">
@@ -522,7 +519,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -1021,6 +1018,21 @@
           <string>COM получателя (факт)</string>
          </property>
         </column>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="tab_5">
+       <attribute name="title">
+        <string>Анализ пакетов</string>
+       </attribute>
+       <widget class="QPlainTextEdit" name="consolTest">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>10</y>
+          <width>841</width>
+          <height>321</height>
+         </rect>
+        </property>
        </widget>
       </widget>
      </widget>
