--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -519,7 +519,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -1029,9 +1029,22 @@
          <rect>
           <x>20</x>
           <y>10</y>
-          <width>841</width>
+          <width>811</width>
           <height>321</height>
          </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="geometry">
+         <rect>
+          <x>840</x>
+          <y>30</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Очистить</string>
         </property>
        </widget>
       </widget>
