--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1050,6 +1050,13 @@
       </widget>
      </widget>
     </item>
+    <item row="2" column="0">
+     <widget class="QPushButton" name="pbCancelReconnect">
+      <property name="text">
+       <string>Отключить автоподключение конвертеров</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
